force-app/main/default/objects/Chapter_Blood_Region_Zip_Match__c/fields/BL_ID__c.field-meta.xml
<CustomField>
    <fullName>BL_ID__c</fullName>
    <label>BL ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>