force-app/main/default/objects/Chapter_Blood_Region_Zip_Match__c/fields/Chapter__c.field-meta.xml
<CustomField>
    <fullName>Chapter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chapter</label>
    <referenceTo>Chapter__c</referenceTo>
    <relationshipLabel>Chapter/Blood Region Zip Matches (Chapter)</relationshipLabel>
    <relationshipName>Chapter_Blood_Region_Zip_Matches1</relationshipName>
    <type>Lookup</type>
</CustomField>