force-app/main/default/objects/Chapter_Blood_Region_Zip_Match__c/listViews/All_Chapter_Blood_Region_Zip_Matches.listView-meta.xml
<ListView>
    <fullName>All_Chapter_Blood_Region_Zip_Matches</fullName>
    <columns>NAME</columns>
    <columns>Blood_Region__c</columns>
    <columns>Type__c</columns>
    <columns>Zip__c</columns>
    <columns>Chapter__c</columns>
    <columns>ID__c</columns>
    <columns>BL_ID__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Zip__c</field>
        <operation>equals</operation>
        <value>49416</value>
    </filters>
    <label>All Chapter/Blood Region Zip Matches</label>
</ListView>