force-app/main/default/objects/Chapter_Blood_Region_Zip_Match__c/listViews/Chapter_Zip_Matches.listView-meta.xml
<ListView>
    <fullName>Chapter_Zip_Matches</fullName>
    <columns>NAME</columns>
    <columns>Blood_Region__c</columns>
    <columns>Type__c</columns>
    <columns>Zip__c</columns>
    <columns>Chapter__c</columns>
    <columns>ID__c</columns>
    <columns>BL_ID__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Chapter__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Chapter Zip Matches</label>
</ListView>